samples/_failures_safe/1761330765_bceb60_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_414fa4c4.c: In function ‘main’:
./samples/SAFE/__tmp_414fa4c4.c:172:5: error: expected declaration or statement at end of input
  172 |     parser_init(&parser, input);
      |     ^~~~~~~~~~~
